tests/security/taintedInputToParamAfterAssignment/output.txt
ERROR: TaintedData - input.hack:15:22 - Data from a URL query string found its way to a SQL query using path $_GET --ExpressionFetch(ArrayValue, "user_id")--> $_GET['user_id'] (input.hack:5:47) --Default--> call to A::getAppendedUserId (input.hack:5:38) --Default--> A::getAppendedUserId#1 (input.hack:9:46) --Default--> $user_id (input.hack:9:46) --Default--> composition (input.hack:10:16) --Default--> A::getAppendedUserId() (input.hack:9:58) --Default--> call to A::deleteUser (input.hack:5:13) --Default--> A::deleteUser#2 (input.hack:13:67) --Default--> $userId (input.hack:13:67) --Default--> $userId2 (input.hack:14:9) --Default--> composition (input.hack:15:22) --Default--> call to AsyncMysqlConnection::query (input.hack:15:22) --Default--> AsyncMysqlConnection::query#1